$Id: CHANGELOG.txt,v 1.31 2006/03/07 00:05:56 gregluck Exp $

<release version="0.5" date="2008-10-15" desc="Initial release of ehcache server">
    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="update">
        Set the "application/octet-stream" mime type to uploads which do not set a MIME Type, rather than erroring out.
    </action>
    <action dev="Greg Luck" type="update">
       	Add additional information to the cache element. 
    </action>
    <action dev="Greg Luck" type="update">
       	Update version to .5 to sync up with server. Feedback is that everyone wants releases of both the server and standalone server at the same
        time. 
    </action>
</release>
<release version="0.3" date="2008-8-3" desc="Initial release of ehcache server">
    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="add">
        Add RESTful, resource oriented implementation.
    </action>
</release>
<release version="0.2" date="2008-7-17" desc="Initial release of ehcache server">
    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="add">
        Added wsdl files which for some reason are required by Glassfish V3 embedded but not Glassfish V3.
    </action>
</release>
<release version="0.1" date="2008-7-12" desc="Initial release of ehcache server">

    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="add">
        Initial release. Provides RESTful and SOAP Web Services via a web container deployable WAR.
    </action>

</release>
